<resources>
    <!--    Labels    -->
    <string name="app_name">hat</string>
    <string name="app_title">The Hat</string>
    <string name="game_settings_title">Game Settings</string>
    <string name="hat_filling_title">Fill the Hat</string>
    <string name="game_start_title">Game Status</string>
    <string name="game_turn_title">Your Turn</string>
    <string name="label_teams">Teams</string>
    <string name="label_team_default">Team %1$d</string>
    <string name="hint_team_name">Enter team</string>
    <string name="label_total_words">Total words for the game</string>
    <string name="hint_total_words">Enter total words</string>
    <string name="label_turn_duration">Turn duration (seconds)</string>
    <string name="hint_turn_duration">Enter seconds</string>
    <string name="default_turn_duration">60</string>
    <string name="label_word">Your word</string>
    <string name="hint_word">Enter new word</string>
    <string name="label_words_left">Words left: %1$d</string>
    <string name="label_time_left">Time left: %1$d</string>
    <string name="label_turn_score">Turn score: %1$d</string>
    <string name="label_time_is_up">Time’s up!</string>
    <string name="label_words_in_hat">Words in hat: %1$d</string>
    <string name="label_team_queue_item">%1$s: %2$d</string>
    <string name="label_round_is_over">
        Hat is empty.
        \nStart new round?
    </string>
    <string name="label_credits">
        Project on GitHub: github.com/c71n93/hat\n
        Feel free to contribute or report bugs.
    </string>
    <string name="dialog_live_title">Leave?</string>
    <!--    Buttons    -->
    <string name="button_new_game">New Game</string>
    <string name="button_switch_language">EN</string>
    <string name="button_next">Next</string>
    <string name="button_add_team">Add Team</string>
    <string name="button_remove_team">Remove Team</string>
    <string name="button_add_word">Add Word</string>
    <string name="button_start_turn">Start Turn</string>
    <string name="button_start">Start</string>
    <string name="button_accept">Accept Word</string>
    <string name="button_return">Put Back</string>
    <string name="button_end_turn">End Turn</string>
    <string name="button_new_round">New Round</string>
    <string name="button_end_game">End Game</string>
    <string name="button_leave">Leave</string>
</resources>
