<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_game_settings"
    app:startDestination="@id/gameSettingsFragment">

    <fragment
        android:id="@+id/gameSettingsFragment"
        android:name="hat.ui.activity.game.GameSettingsFragment"
        android:label="@string/game_settings_title">
        <action
            android:id="@+id/action_gameSettingsFragment_to_hatFillingFragment"
            app:destination="@id/hatFillingFragment" />
    </fragment>

    <fragment
        android:id="@+id/hatFillingFragment"
        android:name="hat.ui.activity.game.HatFillingFragment"
        android:label="@string/hat_filling_title">
        <action
            android:id="@+id/action_hatFillingFragment_to_gameStartFragment"
            app:destination="@id/gameStartFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameStartFragment"
        android:name="hat.ui.activity.game.GameStartFragment"
        android:label="@string/game_start_title">
        <action
            android:id="@+id/action_gameStartFragment_to_gameTurnFragment"
            app:destination="@id/gameTurnFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameTurnFragment"
        android:name="hat.ui.activity.game.GameTurnFragment"
        android:label="@string/game_turn_title">
        <action
            android:id="@+id/action_gameTurnFragment_to_gameStartFragment"
            app:destination="@id/gameStartFragment" />
    </fragment>

</navigation>
