<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/label_hat_filling_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hat_filling_title"
        android:textAppearance="@style/TextAppearance.Hat.Title"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_word"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.Hat.Subtitle"
        app:layout_constraintBottom_toTopOf="@+id/input_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/input_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_word"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toTopOf="@+id/text_words_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_word" />

    <TextView
        android:id="@+id/text_words_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Hat.Body"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/button_add_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_word"
        tools:text="@string/label_words_left" />

    <Button
        android:id="@+id/button_add_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_add_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_words_left" />

</androidx.constraintlayout.widget.ConstraintLayout>
